[package]
name = "dd-wrt-wol-api"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version="1.9.0", features=["attributes", "tokio1"] }
color-eyre = "0.5.11"
dd-wrt-wol-common = { path="../common" }
opentelemetry = { version="0.14.0", features=["rt-async-std", "serialize"] }
opentelemetry-otlp = { version="0.7.0" }
opentelemetry-semantic-conventions = "0.6.0"
structopt = "0.3.21"
tide = "0.16.0"
tide-tracing = "0.0.11"
tracing = "0.1.26"
tracing-error = "0.1.2"
tracing-log = "0.1.2"
tracing-opentelemetry = "*"
tracing-subscriber = "0.2.18"
