[package]
name = "dd-wrt-wol-api"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dd-wrt-wol-common = { path = "../common" }
env_logger = "0.11.2"
log = "0.4.20"
structopt = "0.3.26"
tide = "0.16.0"
