[package]
name = "dd-wrt-wol-cli"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
dd-wrt-wol-common = { path = "../common" }
env_logger = "0.10.2"
log = "0.4.20"
reqwest = { version = "0.11.23", features = [
    "json",
    "rustls-tls"
], default-features = false }
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["full"] }
