[package]
name = "dd-wrt-wol-cli"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.81"
dd-wrt-wol-common = { path = "../common" }
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.2", features = [
    "json",
    "rustls-tls"
], default-features = false }
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
